test/libsolidity/syntaxTests/parsing/user_defined_value_type_in_function_err.sol
function f() {
    type(uint).max;
    type MyInt is int;
}
// ----
// ParserError 2314: (44-49): Expected ';' but got identifier
